// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderHelpMenu Rendering Render HeaderHelpMenu component with props 1`] = `
<React.Fragment>
  <div
    className="customHelpMenu"
  >
    <button
      aria-controls={null}
      aria-expanded={false}
      aria-haspopup="true"
      className="HeaderHelpMenu__button"
      id="helpMenuButton"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    >
      <HeaderIcon
        className="button"
        icon={[Function]}
        label="Help"
      />
    </button>
  </div>
</React.Fragment>
`;

exports[`HeaderHelpMenu Rendering Render HeaderHelpMenu component with pseudo translated text 1`] = `
<React.Fragment>
  <div
    className="customHelpMenu"
  >
    <button
      aria-controls={null}
      aria-expanded={false}
      aria-haspopup="true"
      className="HeaderHelpMenu__button"
      id="helpMenuButton"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    >
      <HeaderIcon
        className="button"
        icon={[Function]}
        label="Héélp"
      />
    </button>
  </div>
</React.Fragment>
`;
